--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.6'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
