--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.warehouse" >
+    package="com.example.warehouse">
 
     <application
         android:allowBackup="true"
@@ -12,9 +12,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WareHouse"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".Home"
+            android:name=".View_Customer"
+            android:exported="false" />
+        <activity
+            android:name=".View_item"
+            android:exported="false" />
+        <activity
+            android:name=".Delete_user"
+            android:exported="false" />
+        <activity
+            android:name=".Edit_user"
+            android:exported="false" />
+        <activity
+            android:name=".update_items"
+            android:exported="false" />
+        <activity
+            android:name=".add_customer"
+            android:exported="false" />
+        <activity
+            android:name=".add_item_pop_up"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreen"
             android:exported="false" />
         <activity
             android:name=".ForgotPassword"
@@ -29,8 +50,8 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen"
-            android:exported="true" >
+            android:name=".Home"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
